// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme snapshot 1`] = `
{
  "breakpoints": {
    "lg": "1024px",
    "md": "768px",
    "sm": "640px",
    "xl": "1280px",
    "xxl": "1536px",
  },
  "colors": {
    "background": "#000000",
    "foreground": "#FFFFFF",
    "gray": {
      "gr050": "#F2F2F2",
      "gr100": "#E5E5E5",
      "gr200": "#C7C7C7",
      "gr300": "#AEAEAE",
      "gr400": "#8E8E8E",
      "gr500": "#636363",
      "gr600": "#484848",
      "gr700": "#3A3A3A",
      "gr800": "#2C2C2C",
      "gr900": "#1C1C1C",
    },
    "green": {
      "g050": "#EDFFF1",
      "g100": "#D6F6DE",
      "g200": "#ACEDBC",
      "g300": "#83E39B",
      "g400": "#59DA79",
      "g500": "#30D158",
      "g600": "#26A746",
      "g700": "#1D7D35",
      "g800": "#135423",
      "g900": "#0A2A12",
    },
    "neutral": {
      "black": "#000000",
      "white": "#FFFFFF",
    },
    "primary": {
      "pr050": "#F3F1FE",
      "pr100": "#E8E3FF",
      "pr200": "#D1C6FF",
      "pr300": "#BBAAFF",
      "pr400": "#A48DFF",
      "pr500": "#8D71FF",
      "pr600": "#715ACC",
      "pr700": "#554499",
      "pr800": "#382D66",
      "pr900": "#1C1733",
    },
    "red": {
      "r050": "#FFF1F0",
      "r100": "#FFDAD8",
      "r200": "#FFB5B0",
      "r300": "#FF8F89",
      "r400": "#FF6A61",
      "r500": "#FF453A",
      "r600": "#CC372E",
      "r700": "#992923",
      "r800": "#661C17",
      "r900": "#330E0C",
    },
  },
  "typography": {
    "colors": {
      "primary": "#FFFFFF",
      "secondary": "#000000",
    },
    "fonts": {
      "fallback": "sans-serif",
      "primary": "Inter",
      "secondary": "system-ui",
    },
    "weights": {
      "bold": 700,
      "light": 200,
      "regular": 400,
    },
  },
}
`;

exports[`Theme snapshot 2`] = `
{
  "breakpoints": {
    "lg": "1024px",
    "md": "768px",
    "sm": "640px",
    "xl": "1280px",
    "xxl": "1536px",
  },
  "colors": {
    "background": "#FFFFFF",
    "foreground": "#000000",
    "gray": {
      "gr050": "#F2F2F2",
      "gr100": "#E5E5E5",
      "gr200": "#C7C7C7",
      "gr300": "#AEAEAE",
      "gr400": "#8E8E8E",
      "gr500": "#636363",
      "gr600": "#484848",
      "gr700": "#3A3A3A",
      "gr800": "#2C2C2C",
      "gr900": "#1C1C1C",
    },
    "green": {
      "g050": "#EDFFF1",
      "g100": "#D6F6DE",
      "g200": "#ACEDBC",
      "g300": "#83E39B",
      "g400": "#59DA79",
      "g500": "#30D158",
      "g600": "#26A746",
      "g700": "#1D7D35",
      "g800": "#135423",
      "g900": "#0A2A12",
    },
    "neutral": {
      "black": "#000000",
      "white": "#FFFFFF",
    },
    "primary": {
      "pr050": "#F3F1FE",
      "pr100": "#E8E3FF",
      "pr200": "#D1C6FF",
      "pr300": "#BBAAFF",
      "pr400": "#A48DFF",
      "pr500": "#8D71FF",
      "pr600": "#715ACC",
      "pr700": "#554499",
      "pr800": "#382D66",
      "pr900": "#1C1733",
    },
    "red": {
      "r050": "#FFF1F0",
      "r100": "#FFDAD8",
      "r200": "#FFB5B0",
      "r300": "#FF8F89",
      "r400": "#FF6A61",
      "r500": "#FF453A",
      "r600": "#CC372E",
      "r700": "#992923",
      "r800": "#661C17",
      "r900": "#330E0C",
    },
  },
  "typography": {
    "colors": {
      "primary": "#000000",
      "secondary": "#FFFFFF",
    },
    "fonts": {
      "fallback": "sans-serif",
      "primary": "Inter",
      "secondary": "system-ui",
    },
    "weights": {
      "bold": 700,
      "light": 200,
      "regular": 400,
    },
  },
}
`;
